kubernetes/.old/base/_network-policy/allow-labeled-egress-kubeapi.yaml
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/cilium.io/ciliumclusterwidenetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: allow-labeled-egress-kubeapi
spec:
  description: "Policy for allowing traffic to egress to the kube api server."
  endpointSelector:
    matchLabels:
      networking/allow-egress-kubeapi: "true"
  egress:
    - toEntities:
        - kube-apiserver
#---
#apiVersion: cilium.io/v2
#kind: CiliumClusterwideNetworkPolicy
#metadata:
#  name: allow-labeled-ingress-kubeapi
#spec:
#  description: "Policy for allowing traffic to ingress to the kube api server."
#  endpointSelector:
#  ingress:
#    - fromEntities:
#        - kube-apiserver
