kubernetes/.old/base/_network-policy/allow-labeled-ingress-internal.yaml
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/cilium.io/ciliumclusterwidenetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: allow-labeled-ingress-internal
spec:
  description: Allows ingress to pods labeled networking/allow-ingress-internal=true from internal nginx pods.
  endpointSelector:
    matchLabels:
      networking/allow-ingress-internal: "true"
  ingress:
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: network
            app.kubernetes.io/instance: ingress-nginx-internal-app
            app.kubernetes.io/name: ingress-nginx
---
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: allow-labeled-egress-internal
spec:
  description: Allows egress from internal nginx pods to pods labeled networking/allow-ingress-internal=true.
  endpointSelector:
    matchLabels:
      k8s:io.kubernetes.pod.namespace: network
      app.kubernetes.io/instance: ingress-nginx-internal-app
      app.kubernetes.io/name: ingress-nginx
  egress:
    - toEndpoints:
        - matchLabels:
            networking/allow-ingress-internal: "true"
