kubernetes/.old/base/_network-policy/allow-labeled-to-cluster.yaml
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: allow-egress-to-cluster
spec:
  description: "Allow labeled pods to egress to cluster node IPs"
  endpointSelector:
    matchLabels:
      networking/allow-cluster-egress: "true"
  egress:
    - toEntities:
        - cluster
